--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <div class="profile2">
            <a class="profileName" href="#">Malene Mortensen</a>
             <p>Bronze</p>
-            <p>235 Points</p> 
+            <p>235 Points</p>
         </div>
-        
+
       </div>
     </nav>
   </header>
-  <!-- <img class="background" src="img/background_white.png" alt=""> -->
+  <img class="background" src="img/background_white.png" alt="">
     <h1>Velkommen, Malene</h1>
     <div class="landingBox">
       <h2 class="boxText">Se dit medlemskort</h2>
