--- a/landingpage.html
+++ b/landingpage.html
@@ -12,10 +12,11 @@
     <title>Brillebaren Plus</title>
 </head>
 <body>
-    <div class="landingBackground">
+    <div class="background">
         <img class="logo" src="img/logo.png" alt="logo">
         <img class="maskot" src="img/Maskot til Brillebaren 1.png" alt="maskot">
     </div>
+    <div class="whiteBackground">
     <div class="landingBox">
         <h4 class="boxText">Har du allerede en konto?</h4>
         <button class="btn loginBtn">
@@ -31,5 +32,7 @@
         </button>
     </div>
     <p class="landingText">Som medlem af Brillebaren Plus får du eksklusive fordele i Brillebaren i Rosengårdcenteret (Odense)</p>
+</div>
+
 </body>
 </html>
