--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
       </div>
     </nav>
   </header>
-  <img class="background" src="img/background_white.png" alt="">
     <h1>Velkommen, Malene</h1>
     <div class="landingBox">
       <h2 class="boxText">Se dit medlemskort</h2>
@@ -55,30 +54,36 @@
           <i class="fa-solid fa-arrow-right loginArrow"></i>
       </button>
     </div>
-  <h2>Månedens udvalgte belønninger</h2>
+  <h2 class="underOverskrift">Månedens udvalgte belønninger:</h2>
   <div class="rewardBox color1">
     <div class="rewardGrid">
       <h3 class="boxText1 activeText">Gratis Brillerens</h3>
       <h3 class="boxText1 activeText">Klar til brug</h3>
     </div>
-    <p>100%</p>
-    <i class="fa-solid fa-circle-play"></i>
+    <div class="rewardGrid2">
+      <p class="procenter">100%</p>
+      <i class="fa-solid fa-circle-play"></i>
+    </div>
   </div>
   <div class="rewardBox color2">
     <div class="rewardGrid">
       <h3 class="boxText1">10% rabat på næste køb</h3>
       <p class="boxText1">Mangler 450 point</p>
     </div>
-    <p>25%</p>
-    <i class="fa-solid fa-circle-play"></i>
+    <div class="rewardGrid2">
+      <p class="procenter">25%</p>
+      <i class="fa-solid fa-circle-play"></i>
+    </div>
   </div>
   <div class="rewardBox color3">
     <div class="rewardGrid">
       <h3 class="boxText1">Gratis kop kaffe</h3>
       <p class="boxText1">Mangler 200 point</p>
     </div>
-    <p>10%</p>
-    <i class="fa-solid fa-circle-play"></i>
+    <div class="rewardGrid2">
+      <p class="procenter">10%</p>
+      <i class="fa-solid fa-circle-play"></i>
+    </div>
   </div>
 </body>
 </html>
