--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       </div>
     </nav>
   </header>
-    <h1>Velkommen, Malene</h1>
+  <div class="background">
+        <h1>Velkommen, Malene</h1>
+  </div>
+  <div class="whiteBackground">
     <div class="landingBox">
       <h2 class="boxText">Se dit medlemskort</h2>
       <button class="btn btnIndex">
@@ -85,5 +88,6 @@
       <i class="fa-solid fa-circle-play"></i>
     </div>
   </div>
+</div>
 </body>
 </html>
