--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
     </nav>
   </header>
   <div class="background">
-        <h1>Velkommen, Malene</h1>
+    <div class="overskriftCentreret">
+      <h1>Velkommen, Malene</h1>
+    </div>
+        
   </div>
   <div class="whiteBackground">
     <div class="landingBox">
