--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="rewardBox color1">
     <div class="rewardGrid">
       <h3 class="boxText1 activeText">Gratis Brillerens</h3>
-      <h3 class="boxText1 activeText">Klar til brug</h3>
+      <h3 class="boxText1 activeTextGreen">Klar til brug</h3>
     </div>
     <div class="rewardGrid2">
       <p class="procenter">100%</p>
