Navbar rename and almost finished rewards

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="javascript/index_javascript.js"></script>
+    <script src="javascript/navbar_javascript.js"></script>
     <link rel="stylesheet" href="stylesheet/style.css">
     <script src="https://kit.fontawesome.com/51dbfd6491.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,9 +14,7 @@
 <body>
   <header>
     <div class="burger-icon">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
+      <i class="fa-solid fa-bars"></i>
     </div>
     <nav class="menu">
       <div class="menu-header">
