--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="javascript/index_javascript.js"></script>
+  <script src="javascript/navbar_javascript.js"></script>
   <link rel="stylesheet" href="stylesheet/style.css">
   <script src="https://kit.fontawesome.com/51dbfd6491.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,36 +48,36 @@
   <div class="whiteBackground">
 
     <div class='faq'>
-      <input id='faq-a' type='checkbox'>
+      <input id='faq-a' type='checkbox' class="read-more">
       <label for='faq-a'>
         <p class="faq-heading">Hvordan ændre jeg mit medlemsskab?</p>
         <p class="faq-text">Under min konto vælger du din plan, hvorefter du kan ændre den om nødvendigt. Dog er der en opsigelsesperiode på 1 måned på Sølv og Guld planen.</p>
       </label>
       <input id='faq-b' type='checkbox'>
       <label for='faq-b'>
-        <p class="faq-heading">Do you have professional development trainings available?</p>
-        <p class="faq-text">Yes, we have professional development trainings available almost every month. Teachers can take our online course that will train you on the theory and practice of putting lessons online, often called flipped or blended learning. These trainings also include in depth instruction on how to use Brainitz.<br><br>Online training start at $45, include a 1 year subscription Brainitz, and come with 1 hour of advancement credit available through Adams State University or $55. For dates on upcoming trainings, email us at welcome@brainitz.com. If you have more questions, please feel free to submit a request!</p>
+        <p class="faq-heading">Hvad koster det at være medlem?</p>
+        <p class="faq-text">Det er gratis at være medlem, men ønsker du at have flere fordele end hvad Bronze planen inkludere, skal du blot være Sølv eller Guld planen. Du kan læse mere om dette <a href="#planer">her.</a></p>
       </label>
       <input id='faq-c' type='checkbox'>
       <label for='faq-c'>
-        <p class="faq-heading">Does Brainitz accept purchase orders?</p>
-        <p class="faq-text">Yes, Brainitz accepts purchase order for site licenses. Please set the PO, including a description of the order to welcome@brainitz.com and we will invoice you for the amount. Once we send the invoice, someone will be in touch to set up your Brainitz account.<br><br>You can learn more about our licensing structure on our pricing page. If you have more questions, please feel free to submit a request!</p>
+        <p class="faq-heading">Hvilke fordele er der ved klubben?</p>
+        <p class="faq-text">Der er massere af fordele ved at være medlem af Brillebaren Plus, herunder optjening af points og indløs disse til
+dine ønsket rabatter, belønninger invitation til eksklusive events og meget mere!</p>
       </label>
       <input id='faq-d' type='checkbox'>
       <label for='faq-d'>
-        <p class="faq-heading">What are the technical requirements for Brainitz?</p>
-        <p class="faq-text">To get setup with Brainitz, instructors will need a computer with working Internet connection and a web browser. <br><br>Students will need any device with a web browser, ranging from smartphones to tablets and personal computer, as well as an Internet or cellular connection. <br><br>For the be st experience, we recommend using the latest version of Google Chrome, but it should work on a recent version of any major browser. If you have any more questions, please feel free to submit a request! </p>
+        <p class="faq-heading">Hvad er bindingsperioden?</p>
+        <p class="faq-text">Bindingsperioden på Sølv og Guld planen er på 3 måneder.</p>
       </label>
       <input id='faq-e' type='checkbox'>
       <label for='faq-e'>
-        <p class="faq-heading">Can I add a PowerPoint to Brainitz</p>
-        <p class="faq-text">Yes, you can add a PowerPoint to Brainitz. The easiest way is to record your PowerPoint presentation using a screen capture program like www.screencast-o-matic.com You can view our tutorial on how to do this here. <br><br>This will allow you to record your PowerPoint as a video with your voice describing the slides. You will then be able to upload the video on Brainitz and create an interactive video lesson. If you have any more questions, please feel free to submit a request!</p>
+        <p class="faq-heading">Hvordan opsiger jeg Sølv eller Guld planen?</p>
+        <p class="faq-text">Under <a href="#minkonto">Min Konto</a> kan du ændre din plan til Bronze planen, dog mister du dine ekslusive tilbud som Sølv eller Guld medlem.</p>
       </label>
-        <input id='settings' type='checkbox'>
       <input id='faq-f' type='checkbox'>
       <label for='faq-f'>
-        <p class="faq-heading">Did my student really get logged out and lose their progress?</p>
-        <p class="faq-text">If a student does not answer a question in 5 minutes after it pops up the student will be ‘timed out’ and they will lose their progress from the last previously answered question <br><br>This feature is built in to discourage students from playing a video lesson and walking away. Students must stay engaged with the video lesson to avoid being timed out. If you have more questions, please feel free to submit a request!</p>
+        <p class="faq-heading">Hvor mange points optjener man?</p>
+        <p class="faq-text">Som Bronze medlem optjener du 1 per krone du bruger i butikken. Dog som Sølv og Guld medlem optjener du dobbelt så mange points, så du hurtigere kan få belønningerne.</p>
       </label>
     </div>
 
