modal update for rewards

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="back-btn"><i class="fa-solid fa-arrow-left"></i></div>
       </div>
       <ul>
-        <li><i class="fa fa-solid fa-house"></i><a href="#index.html">Hjem</a></li>
+        <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
         <li><i class="fa fa-solid fa-table-cells-large"></i><a href="#">Overblik</a></li>
         <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
         <li><i class="fa fa-regular fa-circle-question"></i><a href="#">Hjælp</a></li>
@@ -30,8 +30,8 @@
         <i class="profile1 fa-regular fa-user"></i>
         <div class="profile2">
            <a class="profileName" href="#">Malene Mortensen</a>
-            <p>Bronze</p>
-            <p>235 Points</p>
+            <p class="profileTxt">Bronze</p>
+            <p class="profileTxt">235 Points</p>
         </div>
       </div>
     </nav>
@@ -51,10 +51,10 @@
     </div>
     <div class="landingBox">
       <h2 class="boxText">Se dine belønninger</h2>
-      <button class="btn btnIndex">
+      <a class="btn btnIndex" href="rewards.html">
           <p class="btnText">Belønninger</p>
           <i class="fa-solid fa-arrow-right loginArrow"></i>
-      </button>
+      </a>
     </div>
   <h2 class="underOverskrift">Månedens udvalgte belønninger:</h2>
   <div class="rewardBox color1">
