--- a/rewards.html
+++ b/rewards.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript/navbar_javascript.js"></script>
+    <script src="javascript/modal.js"></script>
     <link rel="stylesheet" href="stylesheet/style.css">
     <script src="https://kit.fontawesome.com/51dbfd6491.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +23,7 @@
                 <div class="back-btn"><i class="fa-solid fa-arrow-left"></i></div>
               </div>
               <ul>
-                <li><i class="fa fa-solid fa-house"></i><a href="#index.html">Hjem</a></li>
+                <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
                 <li><i class="fa fa-solid fa-table-cells-large"></i><a href="#">Overblik</a></li>
                 <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
                 <li><i class="fa fa-regular fa-circle-question"></i><a href="#">Hjælp</a></li>
@@ -31,21 +32,22 @@
                 <i class="profile1 fa-regular fa-user"></i>
                 <div class="profile2">
                    <a class="profileName" href="#">Malene Mortensen</a>
-                    <p>Bronze</p>
-                    <p>235 Points</p>
+                    <p class="profileTxt">Bronze</p>
+                    <p class="profileTxt">235 Points</p>
                 </div>
               </div>
             </nav>
           </header>
 
         <div class="background">
-            <h1>Belønninger</h1>
+            <br>
+            <h1 class="rewardHeader">Belønninger</h1>
         </div>
 
         <div class="whiteBackground">
 <!-- Klar til brug -->
         <h1 class="underOverskrift">Klar til brug</h1>
-        <div class="rewardBox1 color1">
+        <div id="myBtn" class="rewardBox1 color1">
             <h3 class="rewardText activeText">Gratis Brillerens</h3>
             <i class="fa-solid fa-circle-check"></i>
         </div>
@@ -134,8 +136,35 @@
                 <div class="circle"></div>
             </div>
         </div>
+
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <div class="modal-icons">
+        <i class="fa-solid fa-spray-can-sparkles"></i>
+        <i class="fa-solid fa-glasses"></i>
+    </div>
+    <h2 class="modal-overskrift">Gratis brillerens</h2>
+    <p>Udløber 01-07-2023</p>
+    <br>
+    <p>En gratis spray brillerens, som kan afhentes i Brillebaren</p>
+    <button class="greenBtn">
+        <p class="greenBtnTxt activeText">Aktiver Belønning</p>
+    </button>
+  </div>
+
+</div>
         <footer></footer>
     </div>
+
+
+
+
+      
 
     </body>
 </html>
