--- a/faq.html
+++ b/faq.html
@@ -45,8 +45,7 @@
     <h1>Ofte stillede spørgsmål</h1>
   </div>
 
-  <div class="whiteBackground">
-
+  <div class="whiteBackground" id="whiteBackgroundShort">
     <div class='faq'>
       <input id='faq-a' type='checkbox' class="read-more">
       <label for='faq-a'>
@@ -67,7 +66,7 @@ dine ønsket rabatter, belønninger invitation til eksklusive events og meget me
       <input id='faq-d' type='checkbox'>
       <label for='faq-d'>
         <p class="faq-heading">Hvad er bindingsperioden?</p>
-        <p class="faq-text">Bindingsperioden på Sølv og Guld planen er på 3 måneder.</p>
+        <p class="faq-text">Bindingsperioden på Sølv og Guld planen er på 3 måneder. Ønsker du at ændre din plan efterfølgende kan du gøre det igennem <a href="#minkonto">Min konto</a>hvor du kan vælge den plan, som passer bedst til dine behov.</p>
       </label>
       <input id='faq-e' type='checkbox'>
       <label for='faq-e'>
