--- a/faq.html
+++ b/faq.html
@@ -16,9 +16,7 @@
 <body>
   <header>
     <div class="burger-icon">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
+      <i class="fa-solid fa-bars"></i>
     </div>
     <nav class="menu">
       <div class="menu-header">
