Overblik side, og opdatering af links på nav

--- a/overblik.html
+++ b/overblik.html
@@ -12,6 +12,95 @@
     <title>Overblik</title>
 </head>
 <body>
-    
+    <header>
+        <div class="burger-icon">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <nav class="menu">
+          <div class="menu-header">
+            <div class="back-btn"><i class="fa-solid fa-arrow-left"></i></div>
+          </div>
+          <div class="navContainer">
+            <ul class="navbar">
+                <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
+                <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
+                <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
+                <li><i class="fa fa-regular fa-circle-question"></i><a href="#">Hjælp</a></li>
+            </ul>
+          </div>
+          
+          <div class="profileFlex">
+            <i class="profile1 fa-regular fa-user"></i>
+            <div class="profile2">
+               <a class="profileName" href="#">Malene Mortensen</a>
+                <p class="profileTxt">Bronze</p>
+                <p class="profileTxt">235 Points</p>
+            </div>
+          </div>
+        </nav>
+    </header>
+
+    <div class="background">
+        <br>
+        <h1 class="rewardHeader">Overblik</h1>
+    </div>
+
+    <div class="whiteBackground">
+        <ul class="overblik">
+            <li>
+                <a class="overblikList" href="#">
+                    <div class="colorCircle color1"></div>
+                    <div class="listTxt">
+                        <h2 class="overblikTitel">Min konto</h2>
+                        <p>Navn, adresse mm.</p>
+                    </div>
+                </a>
+            </li>
+            <hr>
+            <li>
+                <a class="overblikList" href="rewards.html">
+                    <div class="colorCircle color2"></div>
+                    <div class="listTxt">
+                        <h2 class="overblikTitel">Mine belønninger</h2>
+                        <p>10 rabatter venter</p>
+                    </div>
+                </a>
+            </li>
+            <hr>
+            <li>
+                <a class="overblikList" href="#">
+                    <div class="colorCircle color3"></div>
+                    <div class="listTxt">
+                        <h2 class="overblikTitel">Mine fakturer</h2>
+                        <p>3 fakturer</p>
+                    </div>
+                </a>
+            </li>
+            <hr>
+            <li>
+                <a class="overblikList" href="#">
+                    <div class="colorCircle color1"></div>
+                    <div class="listTxt">
+                        <h2 class="overblikTitel">Mine produkter</h2>
+                        <p>4 produkter</p>
+                    </div>
+                </a>
+            </li>
+            <hr>
+            <li>
+                <a class="overblikList" href="#">
+                    <div class="colorCircle color2"></div>
+                    <div class="listTxt">
+                        <h2 class="overblikTitel">Synsprøve resultater</h2>
+                        <p>2 resultater</p>
+                    </div>
+                </a>
+            </li>
+        </ul>
+        <button class="greenBtn btn">
+            <p class="greenBtnTxt activeText">Opgrader plan</p>
+            <i class="fa-solid fa-arrow-right greenArrow"></i>
+        </button>
+    </div>
 </body>
 </html>
