--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
 <body>
   <header>
     <div class="burger-icon">
-      <i class="fa-solid fa-bars"></i>
+        <i class="fa-solid fa-bars"></i>
     </div>
     <nav class="menu">
       <div class="menu-header">
         <div class="back-btn"><i class="fa-solid fa-arrow-left"></i></div>
       </div>
-      <ul>
-        <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
-        <li><i class="fa fa-solid fa-table-cells-large"></i><a href="#">Overblik</a></li>
-        <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
-        <li><i class="fa fa-regular fa-circle-question"></i><a href="#">Hjælp</a></li>
-      </ul>
+      <div class="navContainer">
+        <ul class="navbar">
+            <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
+            <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
+            <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
+            <li><i class="fa fa-regular fa-circle-question"></i><a href="#">Hjælp</a></li>
+        </ul>
+      </div>
+      
       <div class="profileFlex">
         <i class="profile1 fa-regular fa-user"></i>
         <div class="profile2">
@@ -35,7 +38,7 @@
         </div>
       </div>
     </nav>
-  </header>
+</header>
 
   <div class="background">
     <h1>Velkommen, Malene</h1>
