--- a/rewards.html
+++ b/rewards.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript/navbar_javascript.js"></script>
-    <script src="javascript/modal.js"></script>
     <link rel="stylesheet" href="stylesheet/style.css">
     <script src="https://kit.fontawesome.com/51dbfd6491.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,31 +12,33 @@
     <title>Belønninger</title>
 </head>
     <body>
-
-        <header>
-            <div class="burger-icon">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-            <nav class="menu">
-              <div class="menu-header">
-                <div class="back-btn"><i class="fa-solid fa-arrow-left"></i></div>
-              </div>
-              <ul>
+      <header>
+        <div class="burger-icon">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <nav class="menu">
+          <div class="menu-header">
+            <div class="back-btn"><i class="fa-solid fa-arrow-left"></i></div>
+          </div>
+          <div class="navContainer">
+            <ul class="navbar">
                 <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
-                <li><i class="fa fa-solid fa-table-cells-large"></i><a href="#">Overblik</a></li>
+                <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
                 <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
                 <li><i class="fa fa-regular fa-circle-question"></i><a href="#">Hjælp</a></li>
-              </ul>
-              <div class="profileFlex">
-                <i class="profile1 fa-regular fa-user"></i>
-                <div class="profile2">
-                   <a class="profileName" href="#">Malene Mortensen</a>
-                    <p class="profileTxt">Bronze</p>
-                    <p class="profileTxt">235 Points</p>
-                </div>
-              </div>
-            </nav>
-          </header>
+            </ul>
+          </div>
+          
+          <div class="profileFlex">
+            <i class="profile1 fa-regular fa-user"></i>
+            <div class="profile2">
+               <a class="profileName" href="#">Malene Mortensen</a>
+                <p class="profileTxt">Bronze</p>
+                <p class="profileTxt">235 Points</p>
+            </div>
+          </div>
+        </nav>
+    </header>
 
         <div class="background">
             <br>
@@ -146,13 +147,14 @@
     <span class="close">&times;</span>
     <div class="modal-icons">
         <i class="fa-solid fa-spray-can-sparkles"></i>
-        <i class="fa-solid fa-glasses"></i>
+        <i class="fa-solid fa-glasses fa-rotate-by"></i>
     </div>
     <h2 class="modal-overskrift">Gratis brillerens</h2>
     <p>Udløber 01-07-2023</p>
     <br>
     <p>En gratis spray brillerens, som kan afhentes i Brillebaren</p>
-    <button class="greenBtn">
+    <div id="qrCodeContainer"></div>
+    <button class="greenBtnModal">
         <p class="greenBtnTxt activeText">Aktiver Belønning</p>
     </button>
   </div>
