--- a/faq.html
+++ b/faq.html
@@ -32,8 +32,8 @@
         <i class="profile1 fa-regular fa-user"></i>
         <div class="profile2">
           <a class="profileName" href="#">Malene Mortensen</a>
-          <p>Bronze</p>
-          <p>235 Points</p>
+          <p class="profileTxt">Bronze</p>
+          <p class="profileTxt">235 Points</p>
         </div>
       </div>
     </nav>
