Ændring af navn

--- a/opret.html
+++ b/opret.html
@@ -50,7 +50,7 @@
     <div class="whiteBackground">
 
         <form class="loginForm">
-            <label class="inputLabel">Email</label>
+            <label class="inputLabel">E-mail</label>
             <input type="text" class="form-control" name="username" placeholder="Skriv din Email" required="">
             <br>
             <label class="inputLabel">Fornavn</label>
@@ -59,10 +59,10 @@
             <label class="inputLabel">Efternavn</label>
             <input type="text" class="form-control" name="username" placeholder="Skriv dit efternavn" required="">
             <br>
-            <label class="inputLabel">Password</label>
+            <label class="inputLabel">Adgangskode</label>
             <input type="password" class="form-control" name="password" placeholder="Skriv en adgangskode" required="">
             <br>
-            <label class="inputLabel">Password</label>
+            <label class="inputLabel">Gentag adgangkode</label>
             <input type="password" class="form-control" name="password" placeholder="Gentag adgangskode" required="">
 
                 <div class="dateForm">
