--- a/rewards.html
+++ b/rewards.html
@@ -49,23 +49,23 @@
         <div class="whiteBackground">
 <!-- Klar til brug -->
         <h1 class="underOverskrift">Klar til brug</h1>
-        <button onclick="openModal()" class="rewardBox1 color1">
+        <button onclick="openModal()" class="rewardBox1 colorful-div">
             <h3 class="rewardText activeText">Gratis Brillerens</h3>
             <i class="fa-solid fa-circle-check"></i>
         </button>
-        <button class="rewardBox1 color2">
+        <button class="rewardBox1 colorful-div">
             <h3 class="rewardText activeText">10% rabat på næste køb</h3>
             <i class="fa-solid fa-circle-check"></i>
         </button>
-        <button class="rewardBox1 color3">
+        <button class="rewardBox1 colorful-div">
             <h3 class="rewardText activeText">En kop gratis kaffe</h3>
             <i class="fa-solid fa-circle-check"></i>
         </button>
-        <button class="rewardBox1 color1">
+        <button class="rewardBox1 colorful-div">
             <h3 class="rewardText activeText">Køb 3 betal for 2</h3>
             <i class="fa-solid fa-circle-check"></i>
         </button>
-        <button class="rewardBox1 color2">
+        <button class="rewardBox1 colorful-div">
             <h3 class="rewardText activeText">Fri fragt af linser</h3>
             <i class="fa-solid fa-circle-check"></i>
         </button>
@@ -138,29 +138,6 @@
                 <div class="circle"></div>
             </div>
         </div>
-
-
-<!-- The Modal -->
-<!-- <div id="myModal" class="modal"> -->
-
-  <!-- Modal content -->
-  <!-- <div class="modal-content">
-    <span class="close">&times;</span>
-    <div class="modal-icons">
-        <i class="fa-solid fa-spray-can-sparkles"></i>
-        <i class="fa-solid fa-glasses fa-rotate-by"></i>
-    </div>
-    <h2 class="modal-overskrift">Gratis brillerens</h2>
-    <p>Udløber 01-07-2023</p>
-    <br>
-    <p>En gratis spray brillerens, som kan afhentes i Brillebaren</p>
-    <button class="greenBtnModal">
-        <p class="greenBtnTxt activeText">Aktiver Belønning</p>
-    </button>
-  </div>
-
-</div> -->
-
 
 
 <div id="myModal" class="modal">
