--- a/landingpage.html
+++ b/landingpage.html
@@ -11,7 +11,7 @@
     <title>Brillebaren Plus</title>
 </head>
 <body>
-    <div class="background">
+    <div class="background" id="landingBack">
         <img class="logo" src="img/logo.png" alt="logo">
         <img class="maskot" src="img/Maskot til Brillebaren 1.png" alt="maskot">
     </div>
