Rettelse til logind

--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
 
     <div class="background">
         <br>
-        <h1 class="rewardHeader">Log på din konto</h1>
+        <h1 class="rewardHeader">Log ind på din konto</h1>
     </div>
 
     <div class="whiteBackground">
@@ -52,7 +52,7 @@
         </div>
 
         <form class="loginForm">
-            <label class="inputLabel">Email</label>
+            <label class="inputLabel">E-mail</label>
             <input type="text" class="form-control" name="username" placeholder="Skriv din Email" required="">
             <br>
             <label class="inputLabel">Password</label>
@@ -65,7 +65,7 @@
                 <a class="forgotPassword" href="#">Glemt dit password?</a>
             </div>
 
-            <a class="loginCenterTxt" href="opret.html">Ingen konto endnu? Opret en her</a>
+            <p class="loginCenterTxt">Ingen konto endnu? <a class="loginCenterTxt" href="opret.html">Opret konto.</a></p>
             <br>
             <span class="loginCenterTxt txtLine"> Eller anvend </span>
             <div class="socialLinks">
