--- a/overblik.html
+++ b/overblik.html
@@ -28,7 +28,7 @@
                 <li><i class="fa fa-regular fa-circle-question"></i><a href="#">Hjælp</a></li>
             </ul>
           </div>
-          
+
           <div class="profileFlex">
             <i class="profile1 fa-regular fa-user"></i>
             <div class="profile2">
@@ -102,5 +102,7 @@
             <i class="fa-solid fa-arrow-right greenArrow"></i>
         </button>
     </div>
+    <!-- Footer -->
+    <footer></footer>
 </body>
 </html>
