Navbar and modal updates

--- a/faq.html
+++ b/faq.html
@@ -14,30 +14,34 @@
 </head>
 
 <body>
-  <header>
+  <header class="navHeader">
     <div class="burger-icon">
-      <i class="fa-solid fa-bars"></i>
+        <i class="fa-solid fa-bars"></i>
     </div>
+    <div class="backPage" onclick="goBack()"><i class="fa-solid fa-arrow-left"></i></div>
     <nav class="menu">
       <div class="menu-header">
         <div class="back-btn"><i class="fa-solid fa-arrow-left"></i></div>
       </div>
-      <ul>
-        <li><i class="fa fa-solid fa-house"></i><a href="#index.html">Hjem</a></li>
-        <li><i class="fa fa-solid fa-table-cells-large"></i><a href="#">Overblik</a></li>
-        <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
-        <li><i class="fa fa-regular fa-circle-question"></i><a href="#">Hjælp</a></li>
-      </ul>
+      <div class="navContainer">
+        <ul class="navbar">
+            <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
+            <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
+            <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
+            <li><i class="fa fa-regular fa-circle-question"></i><a href="faq.html">Hjælp</a></li>
+        </ul>
+      </div>
+      
       <div class="profileFlex">
         <i class="profile1 fa-regular fa-user"></i>
         <div class="profile2">
-          <a class="profileName" href="#">Malene Mortensen</a>
-          <p class="profileTxt">Bronze</p>
-          <p class="profileTxt">235 Points</p>
+           <a class="profileName" href="#">Malene Mortensen</a>
+            <p class="profileTxt">Bronze</p>
+            <p class="profileTxt">235 Points</p>
         </div>
       </div>
     </nav>
-  </header>
+</header>
 
   <div class="background">
     <h1>Ofte stillede spørgsmål</h1>
