--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Brillebaren Plus Forside</title>
 </head>
 <body>
-  <header>
+  <header class="navHeader">
     <div class="burger-icon">
         <i class="fa-solid fa-bars"></i>
     </div>
@@ -25,7 +25,7 @@
             <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
             <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
             <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
-            <li><i class="fa fa-regular fa-circle-question"></i><a href="#">Hjælp</a></li>
+            <li><i class="fa fa-regular fa-circle-question"></i><a href="faq.html">Hjælp</a></li>
         </ul>
       </div>
       
