--- a/overblik.html
+++ b/overblik.html
@@ -12,10 +12,11 @@
     <title>Overblik</title>
 </head>
 <body>
-    <header>
+    <header class="navHeader">
         <div class="burger-icon">
             <i class="fa-solid fa-bars"></i>
         </div>
+        <div class="backPage" onclick="goBack()"><i class="fa-solid fa-arrow-left"></i></div>
         <nav class="menu">
           <div class="menu-header">
             <div class="back-btn"><i class="fa-solid fa-arrow-left"></i></div>
@@ -25,7 +26,7 @@
                 <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
                 <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
                 <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
-                <li><i class="fa fa-regular fa-circle-question"></i><a href="#">Hjælp</a></li>
+                <li><i class="fa fa-regular fa-circle-question"></i><a href="faq.html">Hjælp</a></li>
             </ul>
           </div>
 
