--- a/faq.html
+++ b/faq.html
@@ -77,7 +77,11 @@ dine ønsket rabatter, belønninger invitation til eksklusive events og meget me
         <p class="faq-text">Som Bronze medlem optjener du 1 per krone du bruger i butikken. Dog som Sølv og Guld medlem optjener du dobbelt så mange points, så du hurtigere kan få belønningerne.</p>
       </label>
     </div>
-
+    <div class="mereInfo">
+      <h2>Mangler du stadig svar?</h2>
+      <br><p>Kontakt os på <a class="greenLink" href="tel:+4566156967">+45 6615 6967</a></p>
+      <p>eller på <a class="greenLink" href="mailto:info@brillebaren.dk">info@brillebaren.dk</a></p>
+    </div>
 
     <footer></footer>
   </div>
