--- a/opret.html
+++ b/opret.html
@@ -116,8 +116,8 @@
             <br><br>
 
             <label class="vilkr">
-                <p>Ved at lave en konto acceptere du vores <br> <a href="#">Vilkår & betingelser</a> og <a href="#">Privathedspolitik</a></p>
-                <input type="checkbox" value="vilkr" class="rememberMe" name="vilkr">
+                <p>Ved at lave en konto acceptere du vores <a class="greenLink" href="#">Vilkår & betingelser</a> og <a class="greenLink" href="#">Privathedspolitik</a></p>
+                <input type="checkbox" value="terms" class="rememberMe" name="terms">
             </label>
 
             <span class="loginCenterTxt txtLine"> Eller anvend </span>
