--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
 
   <div class="background">
     <br>
-    <h1 class="rewardHeader">Log ind på din konto</h1>
+    <h1 class="rewardHeader">Log ind</h1>
   </div>
 
   <div class="whiteBackground">
